// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox> Global render should render checked 1`] = `
<div>
  <label
    class="checkboxContainer"
  >
    <input
      checked=""
      class="hiddenCheckBox"
      type="checkbox"
    />
    <div
      class="styledCheckbox checked"
    >
      <svg
        class="checkmark"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 10L9 13L15.0407 7"
          stroke-linecap="round"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`<Checkbox> Global render should render default 1`] = `
<div>
  <label
    class="checkboxContainer"
  >
    <input
      class="hiddenCheckBox"
      type="checkbox"
    />
    <div
      class="styledCheckbox"
    >
      <svg
        class="checkmark"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 10L9 13L15.0407 7"
          stroke-linecap="round"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`<Checkbox> Global render should render disabled 1`] = `
<div>
  <label
    class="checkboxContainer disabled"
  >
    <input
      class="hiddenCheckBox"
      disabled=""
      type="checkbox"
    />
    <div
      class="styledCheckbox disabled"
    >
      <svg
        class="checkmark"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 10L9 13L15.0407 7"
          stroke-linecap="round"
        />
      </svg>
    </div>
  </label>
</div>
`;
